--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
 baseURL = 'http://example.org/'
 languageCode = 'en-us'
-title = 'James 3d Art Portfolioo'
+title = 'James Portfolio'
 theme = 'lugo'
