--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://wilcockj.xyz/'
 languageCode = 'en-us'
 title = 'James Portfolio'
 theme = ["hugo-video",'lugo']
